fix start menu not showing on top

--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,7 @@ a:visited {
 }
 
 #start-menu-wrapper {
+  z-index: 98;
   display: flex;
   position: absolute;
   bottom: 40px;
